Fix header, footer, page height on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -130,6 +130,7 @@ header {
 
         @media screen and (max-width: 600px) {
             flex-direction: column;
+            padding: 0.5em;
         }
 
         div {
@@ -137,7 +138,7 @@ header {
             padding: 0 1em;
 
             @media screen and (max-width: 600px) {
-                padding: .3em;
+                padding: .5em;
             }
         }
     }
@@ -233,7 +234,7 @@ aside {
 .content {
     padding: 1em;
     padding-top: 2em;
-    padding-bottom: 8em;
+    padding-bottom: 12em;
 
 }
 
